<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, HelloMAD!</string>
    <string name="app_name">NUMAD-BinBo</string>
    <string name="main_title">Bin Bo</string>
    <string name="sudoku_lable">Sudoku</string>
    <string name="boggle_label">Boggle</string>
    <string name="trickiest_label">Trickiest Part.</string>
    <string name="error_label">Generate Error</string>
    <string name="quit_lable">Quit</string>
    <string name="finalproject_label">Final Project</string>
    <string name="about_title">Team Member</string>
    <string name="about_lable">About</string>
    <string name="about_text">\
		Name: Bin Bo / Wenjing Wang\n
		Email: bigbugbb@gmail.com\n
		       wwwjdan@hotmail.com\n
		Version: 1.3.5\n
		Phone ID: 353091054025160 ／
		          61afdac87a61361e\n
	</string>
    <string name="sudoku_continue_label">Continue</string>
    <string name="sudoku_new_game_label">New Game</string>
    <string name="sudoku_about_label">About</string>
    <string name="sudoku_exit_label">Exit</string>
    <string name="sudoku_about_title">About Android Sudoku</string>
    <string name="sudoku_about_text">\    	
		Sudoku is a logic-based number placement puzzle.
		Starting with a partially completed 9x9 grid, the
		objective is to fill the grid so that each
		row, each column, and each of the 3x3 boxes
		(also called <i>blocks</i>) contains the digits
		1 to 9 exactly once. 		
	</string>
    <string name="sudoku_game_name">Sudoku</string>
    <string name="sudoku_title">Android Sudoku</string>
    <string name="sudoku_settings_label">Settings...</string>
    <string name="sudoku_settings_title">Sudoku settings</string>
    <string name="sudoku_settings_shortcut">s</string>
    <string name="sudoku_music_title">Music</string>
    <string name="sudoku_music_summary">Play background music</string>
    <string name="sudoku_hints_title">Hints</string>
    <string name="sudoku_hints_summary">Show hints during play</string>
    <string name="sudoku_new_game_title">Difficulty</string>
    <string name="sudoku_easy_label">Easy</string>
    <string name="sudoku_medium_label">Medium</string>
    <string name="sudoku_hard_label">Hard</string>
    <string name="sudoku_game_title">Sudoku</string>
    <string name="sudoku_no_moves_label">No moves</string>
    <string name="sudoku_keypad_title">Keypad</string>
    <string name="boggle_title">Android Boggle</string>
    <string name="boggle_continue_label">Continue</string>
    <string name="boggle_new_game_label">New Game</string>
    <string name="boggle_about_label">About</string>
    <string name="boggle_acknowledge_label">Acknowledge</string>
    <string name="boggle_exit_label">Exit</string>
    <string name="boggle_shake_label">Shake</string>
    <string name="boggle_pause_label">Pause</string>
    <string name="boggle_resume_label">Resume</string>
    <string name="boggle_score_label">Score:</string>
    <string name="boggle_best_score_label">Best:</string>
    <string name="boggle_time_label">Time Left</string>
    <string name="boggle_about_title">About Android Boggle</string>
    <string name="boggle_about_text">\    	
		The game begins by shaking a covered tray of sixteen cubic dice, 
		each with a different letter printed on each of its sides. The 
		dice settle into a 4x4 tray so that only the top letter of each 
		cube is visible. After they have settled into the grid, a three-minute 
		sand timer is started and all players simultaneously begin the main phase of play.
	</string>
    <string name="boggle_acknowledge_title">Acknowledge Android Boggle</string>
    <string name="boggle_acknowledge_text">\
		The background music was download from a Chinese
		web site a long time ago. The huffman code is from an old project.
	</string>
    <!-- Persistent Boggle -->
    <string name="pbwelcome_title">""</string>
    <string name="pblogin_title">""</string>
    <string name="pbsignup_title">""</string>
    <string name="pbmain_title">""</string>
    <string name="pbinvite_title">""</string>
    <string name="pbgame_title">""</string>
    <string name="pbrank_title">""</string>
    <string name="pbresult_title">""</string>
    <string name="pboption_title">""</string>
    <string name="pbacknowledge_title">""</string>
    <string name="pbabout_title">""</string>
    <string name="pb_pb_label">"Persistent Boggle"</string>
    <string name="pb_welcome_label">"Welcome"</string>
    <string name="pb_login_label">"Login In"</string>
    <string name="pb_signup_label">"Sign Up"</string>
    <string name="pb_login_summary">"Login with your account name"</string>
    <string name="pb_signup_summary">"Sign up a new account"</string>
    <string name="pb_account_name_label">Account Name</string>
    <string name="pblogin_name_hint">Please enter your account name</string>
    <string name="pbsignup_name_hint">Please enter a new account name</string>
    <string name="pb_new_game_label">New Game</string>
    <string name="pb_rank_label">Rank</string>
    <string name="pb_options_label">Options</string>
    <string name="pb_about_label">About</string>
    <string name="pb_exit_label">Exit</string>
    <string name="pbinvite_user_list_title">Player List</string>
    <string name="pb_back_label">Back</string>
    <string name="pb_invite_label">Invite</string>
    <string name="pb_playing_status_label">(Playing)</string>
    <string name="pb_refresh_label">Refresh</string>
    <string name="pb_invite_msg">
        has invited you to play this game together. 
        Would you like to accept this invitation?
    </string>
    <string name="pb_invite_wait_msg">
        You invitation has been sent. 
        Please wait for the response ...
    </string>
    <string name="pb_result_continue">Continue</string>
    <string name="pb_result_quit">Quit</string>
    <string name="pb_ac_title">Acknowledgement</string>
    <string name="pb_ac_text">
       Thanks SUN WEI for great help in this game project!
    </string>
    <string name="pb_team_title">Team Member</string>
    <string name="pb_team_text">
       BO BIN \n
       WANG WENJING
    </string>
    <string name="rocket_rush_app">MAD-RocketRush</string>
    <string name="sound_title">Sound</string>
    <string name="sound_summary">Enable sound effects</string>
    <string name="vibrate_title">Vibrate</string>
    <string name="vibrate_summary">Enable vibration</string>
    <string name="ac_title">Acknowledgement</string>
    <string name="rr_ac_design">Designer</string>
    <string name="rr_ac_develop">Developer</string>
    <string name="rr_ac_designer">Wang Wenjing</string>
    <string name="rr_ac_developer">Bo Bin</string>
    <string name="rr_img_rkt_credit">Image of The Rocket</string>
    <string name="rr_img_rkt_credit_owner">Nathanial Wilson</string>
    <string name="rr_img_credit">Other Image Resouces</string>
    <string name="rr_img_credit_owner">IconFinder</string>
    <string name="rr_description_title">Description</string>
    <string name="rr_description">Rocket Rush is a game to encourage you to take exercises and get sweating in one minute!
In this game, all you need to do is to keep squatting down and standing up to make your rocket rush higher in the sky.  You may also get into some small troubles with our cute enemies. In short, with Rocket Rush, you will definitely enjoy  the time of exercising and sweating, and in the end get a better body.</string>
	<string name="rr_start">Start RocketRush</string>
</resources>
