<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@color/rr_blue"
	android:gravity="center"
	android:padding="10dip">
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="24sp"
		android:typeface="serif"
		android:textColor="@color/rr_red"
		android:textStyle="bold"
		android:text="@string/ac_title"
		android:paddingBottom="30dp" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="20sp"
		android:typeface="serif"
		android:textColor="@color/black"
		android:textStyle="bold"
		android:text="@string/rr_ac_design"
		android:paddingBottom="10dp" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="18sp"
		android:typeface="serif"
		android:textColor="@color/rr_dark"
		android:textStyle="bold"
		android:text="@string/rr_ac_designer" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="20sp"
		android:typeface="serif"
		android:textColor="@color/black"
		android:textStyle="bold"
		android:text="@string/rr_ac_develop"
		android:paddingTop="20dp"
		android:paddingBottom="10dp" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="18sp"
		android:typeface="serif"
		android:textColor="@color/rr_dark"
		android:textStyle="bold"
		android:text="@string/rr_ac_developer" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="20sp"
		android:typeface="serif"
		android:textColor="@color/black"
		android:textStyle="bold"
		android:text="@string/rr_img_rkt_credit"
		android:paddingTop="20dp"
		android:paddingBottom="10dp" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="18sp"
		android:typeface="serif"
		android:textColor="@color/rr_dark"
		android:textStyle="bold"
		android:text="@string/rr_img_rkt_credit_owner" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="20sp"
		android:typeface="serif"
		android:textColor="@color/black"
		android:textStyle="bold"
		android:text="@string/rr_img_credit"
		android:paddingTop="20dp"
		android:paddingBottom="10dp" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="18sp"
		android:typeface="serif"
		android:textColor="@color/rr_dark"
		android:textStyle="bold"
		android:text="@string/rr_img_credit_owner" />
	
</LinearLayout>