<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@color/background"
   android:gravity="center"
   android:padding="30dip">

    <TextView
        android:text="@string/pb_team_title"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:textSize="20sp"
   		android:textStyle="bold"
   		android:gravity="center"
   		android:padding="8dp" />
    
    <TextView
        android:text="@string/pb_team_text"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:gravity="center"
		android:paddingBottom="20dp" />
    
    <TextView
        android:text="@string/pb_ac_title"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:textSize="20sp"
   		android:textStyle="bold"
   		android:gravity="center"
   		android:padding="8dp" />
    
    <TextView
        android:text="@string/pb_ac_text"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:gravity="center" />
    
</LinearLayout>